--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -29,6 +29,8 @@
     background-color: white;
     /* fallback */
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    color: white;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .large-card-header {
